--- a/publico/vista/Principal.html
+++ b/publico/vista/Principal.html
@@ -16,20 +16,15 @@
     <header class="site-header sticky-top py-1">
         <nav class="navbar navbar-expand-lg navbar-dark bg-prymary">
             <ul class="nav navbar-nav">
-                <li class="nav-item active">
-                    <img class="imgSingIngP" src="../../Imagenes/Logo.png" alt="" width="80" height="40">
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Carrito</a>
+                <li class="nav-item active" >
+                    <a class="nav-link" href="Principal.html"><img class="imgSingIngP" src="../../Imagenes/Logo.png" href="Principal.html" alt="" width="80" height="40"></a>
+                    
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Iniciar Secion</a>
+                    <a class="nav-link" href="SingIn.html">Iniciar Secion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Crear Cuenta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Salir</a>
+                    <a class="nav-link" href="Crear.html">Crear Cuenta</a>
                 </li>
             </ul>
         </nav>
@@ -53,29 +48,30 @@
                 <div class="form-group">
                     <label for="exampleSelect2" class="form-label mt-4">Lista de cafes</label>
                     <select multiple="" class="form-select" id="exampleSelect2">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
-                  </div>
+                </div>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="../../Imagenes/images.png" alt="Card image cap" alt="" width="80" height="59%">
+            <img class="card-img-top" src="../../Imagenes/images.png" alt="Card image cap" alt="" width="80"
+                height="59%">
             <div class="card-body">
                 <h4 class="card-title">Title</h4>
                 <div class="form-group">
                     <label for="exampleSelect2" class="form-label mt-4">Lista de cafes</label>
                     <select multiple="" class="form-select" id="exampleSelect2">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
-                  </div>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -85,13 +81,13 @@
                 <div class="form-group">
                     <label for="exampleSelect2" class="form-label mt-4">Lista de cafes</label>
                     <select multiple="" class="form-select" id="exampleSelect2">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
@@ -104,29 +100,30 @@
                 <div class="form-group">
                     <label for="exampleSelect2" class="form-label mt-4">Lista de cafes</label>
                     <select multiple="" class="form-select" id="exampleSelect2">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
-                  </div>
+                </div>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="../../Imagenes/images (3).png" alt="Card image cap" alt="" width="80" height="59%">
+            <img class="card-img-top" src="../../Imagenes/images (3).png" alt="Card image cap" alt="" width="80"
+                height="59%">
             <div class="card-body">
                 <h4 class="card-title">Title</h4>
                 <div class="form-group">
                     <label for="exampleSelect2" class="form-label mt-4">Lista de cafes</label>
                     <select multiple="" class="form-select" id="exampleSelect2">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
-                  </div>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -136,57 +133,67 @@
                 <div class="form-group">
                     <label for="exampleSelect2" class="form-label mt-4">Lista de cafes</label>
                     <select multiple="" class="form-select" id="exampleSelect2">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
     <footer class="footer-area bg-f">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-md-6">
-					<h3>About Us</h3>
-					<p>Integer cursus scelerisque ipsum id efficitur. Donec a dui fringilla, gravida lorem ac, semper magna. Aenean rhoncus ac lectus a interdum. Vivamus semper posuere dui, at ornare turpis ultrices sit amet. Nulla cursus lorem ut nisi porta, ac eleifend arcu ultrices.</p>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<h3>Opening hours</h3>
-					<p><span class="text-color">Monday: </span>Closed</p>
-					<p><span class="text-color">Tue-Wed :</span> 9:Am - 10PM</p>
-					<p><span class="text-color">Thu-Fri :</span> 9:Am - 10PM</p>
-					<p><span class="text-color">Sat-Sun :</span> 5:PM - 10PM</p>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<h3>Contact information</h3>
-					<p class="lead">Ipsum Street, Lorem Tower, MO, Columbia, 508000</p>
-					<p class="lead"><a href="#">+01 2000 800 9999</a></p>
-					<p><a href="#"> info@admin.com</a></p>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<ul class="list-inline f-social">
-						<li class="list-inline-item"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li class="list-inline-item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li class="list-inline-item"><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-						<li class="list-inline-item"><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						<li class="list-inline-item"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<p class="company-name">All Rights Reserved. &copy; 2018 <a href="#">Yamifood Restaurant</a> Design By : 
-					<a href="https://html.design/">html design</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <h3>About Us</h3>
+                    <p>Integer cursus scelerisque ipsum id efficitur. Donec a dui fringilla, gravida lorem ac, semper
+                        magna. Aenean rhoncus ac lectus a interdum. Vivamus semper posuere dui, at ornare turpis
+                        ultrices sit amet. Nulla cursus lorem ut nisi porta, ac eleifend arcu ultrices.</p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h3>Opening hours</h3>
+                    <p><span class="text-color">Monday: </span>Closed</p>
+                    <p><span class="text-color">Tue-Wed :</span> 9:Am - 10PM</p>
+                    <p><span class="text-color">Thu-Fri :</span> 9:Am - 10PM</p>
+                    <p><span class="text-color">Sat-Sun :</span> 5:PM - 10PM</p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h3>Contact information</h3>
+                    <p class="lead">Ipsum Street, Lorem Tower, MO, Columbia, 508000</p>
+                    <p class="lead"><a href="#">+01 2000 800 9999</a></p>
+                    <p><a href="#"> info@admin.com</a></p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <ul class="list-inline f-social">
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-google-plus"
+                                    aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p class="company-name">All Rights Reserved. &copy; 2018 <a href="#">Yamifood Restaurant</a>
+                            Design By :
+                            <a href="https://html.design/">html design</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
