--- a/Restaurantes/Vista/crearP.html
+++ b/Restaurantes/Vista/crearP.html
@@ -18,10 +18,10 @@
               href="Principal.html" alt="" width="80" height="40"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="SingIn.html">Iniciar Secion</a>
+          <a class="nav-link" href="PrincipalR.html">Pagian Principal</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Crear.html">Crear Cuenta</a>
+          <a class="nav-link" href="../../publico/vista/Principal.php">Salir</a>
         </li>
       </ul>
     </nav>
