--- a/publico/vista/crearRestaurante.html
+++ b/publico/vista/crearRestaurante.html
@@ -30,7 +30,7 @@
 </head>
 
 <body class="bodyC">
-    <form id="formulario01" method="POST" action="../controladores/crearUsuario.php">
+    <form id="formulario01" method="POST" action="../controladores/crearRestaurante.php">
         <div class="containerC">
             <main>
                 <div>
@@ -41,21 +41,10 @@
                     <div class="col-lg-8">
                         <form class="needs-validation" novalidate>
                             <div class="row g-3">
-                                <div class="col-12T">
-                                    <label for="cedula" class="form-label">Cedula</label>
-                                    <input type="text" class="form-control" id="cedula" value="" name="cedula"
-                                        placeholder="Ingrese el número de cedula ..." required>
-                                </div>
                                 <div class="col-sm-6">
-                                    <label for="nombres" class="form-label">Nombres</label>
-                                    <input type="text" class="form-control" id="nombre" name="nombre"
+                                    <label for="nombre" class="form-label">Nombres</label>
+                                    <input type="text" class="form-control" id="nombre" name="nombres"
                                         placeholder="Ingrese sus dos nombres ..." value="" required>
-                                </div>
-
-                                <div class="col-sm-6">
-                                    <label for="apellidos" class="form-label">Apellidos</label>
-                                    <input type="text" class="form-control" id="apellidos" name="apellido"
-                                        placeholder="Ingrese sus dos apellidos ..." value="" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="direccion" class="form-label">Direccion</label>
