--- a/publico/vista/crearRestaurante.html
+++ b/publico/vista/crearRestaurante.html
@@ -35,7 +35,7 @@
             <main>
                 <div>
                     <img class="imgCrear" src="../../Imagenes/Logo.png" alt="" width="150" height="70">
-                    <h2 class="crearC">Crear Cuenta</h2>
+                    <h2 class="crearC">Crear Cuenta Restaurante</h2>
                 </div>
                 <div class="row g-5">
                     <div class="col-lg-8">
@@ -43,7 +43,7 @@
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <label for="nombre" class="form-label">Nombres</label>
-                                    <input type="text" class="form-control" id="nombre" name="nombres"
+                                    <input type="text" class="form-control" id="nombre" name="nombre"
                                         placeholder="Ingrese sus dos nombres ..." value="" required>
                                 </div>
                                 <div class="col-12">
@@ -59,7 +59,6 @@
                                 <button class="btn-primaryC" type="submit">Continuar</button>
                             </div>
                             <br>
-                            <a class="nav-linkS" href="Principal.html"><label class="regresarC">Regresar</label></a>
                             <p class="text-mutedC">&copy; 2021–2021</p>
                         </form>
                     </div>
