--- a/publico/vista/SingIn.html
+++ b/publico/vista/SingIn.html
@@ -39,7 +39,7 @@
                     <input type="password" class="form-control" id="contrasena" name="contrasena" value="" placeholder="Ingrese sucontraseña ..." >
                 </div>
                 <button class="btn-primary" type="submit">Sign in</button>
-                <a class="nav-linkS" href="Principal.html"><label class="regresar">Regresar</label></a>
+                <a class="nav-linkS" href="Principal.php"><label class="regresar">Regresar</label></a>
                 <p class="text-muted">&copy; 2021–2021</p>
             </form>
         </main>
